--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'test_dbt_project'
+name: 'snowflake_dbt_project'
 version: '1.0.0'
 config-version: 2
 
